# strecklistan

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  README.rst  att_göra.md  compose.yml  dev.nginx.conf  docker-compose.yml  todo.md
backend/: Cargo.toml  Dockerfile  Insomnia_2020-10-01.json  README.rst  diesel.toml  example.env  rustfmt.toml  travis.env
backend/db_mock/: init.sql  init2.sql  populate.sh  transactions.sql
backend/migrations/2018-09-24-165903_create_event_table/: up.sql
backend/migrations/2018-10-02-161321_create_event_signups_table/: down.sql  up.sql
backend/migrations/2018-10-12-185822_create_users_table/: up.sql
backend/migrations/2018-12-25-125257_add_signup_event_pubilshed_constraint/: down.sql  up.sql
backend/migrations/2019-03-08-190650_create_inventory_table/: down.sql  up.sql
backend/migrations/2019-12-28-230948_add_inventory_item_image_link/: down.sql  up.sql
backend/migrations/2020-01-09-151700_use_timestamp_with_timezone/: down.sql  up.sql
backend/migrations/2020-09-26-014924_add_pending_transaction_table/: down.sql  up.sql
backend/migrations/2020-10-24-144349_extend_izettle_post_transaction/: down.sql  up.sql
backend/migrations/2021-06-03-184017_add_transaction_deleted_at/: down.sql  up.sql
backend/migrations/2022-02-25-164413_add_inventory_item_deleted_field/: down.sql  up.sql
backend/migrations/2022-03-18-145336_store_izettle_transaction_data/: down.sql  up.sql
backend/migrations/2022-03-30-231001_drop_inventory_bundle_price_check/: down.sql  up.sql
backend/src/: auth.rs  database.rs  index.html  main.rs  models.rs  schema.rs
backend/src/database/: event.rs  mod.rs  transaction.rs
backend/src/models/: book_account.rs  event.rs  inventory.rs  izettle_transaction.rs  mod.rs  signup.rs  transaction.rs  user.rs
backend/src/routes/: event.rs  index.rs  mod.rs  session.rs  signup.rs
backend/src/routes/graphql/: auth_macro.rs  context.rs  event.rs  mod.rs  root.rs
backend/src/routes/rest/: book_account.rs  event.rs  inventory.rs  izettle_poll.rs  izettle_transaction.rs  izettle_transaction_poll.rs  member.rs  mod.rs  receipt.rs  transaction.rs
backend/src/routes/rest/inventory/: mod.rs  transaction.rs
backend/src/routes/rest/izettle/: izettle_bridge_poll.rs  izettle_bridge_result.rs  izettle_poll.rs  izettle_response.rs  izettle_transaction.rs  izettle_transaction_poll.rs  mod.rs
backend/src/schema/: mod.rs  tables.patch  tables.rs  tables2.rs  views.rs
backend/src/util/: catchers.rs  error_json.rs  mod.rs  ord.rs  ser.rs  static_cached_files.rs  status_json.rs  testing.rs
backend/src/util/file/: cached_file.rs  mod.rs  responder.rs
backend/templates/: receipt.html.hbs
backend/www/: pkg
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: book_account.rs  currency.rs  inventory.rs  izettle.rs  member.rs  mod.rs  non_negative.rs  transaction.rs
common/src/models/currency/: non_negative.rs
docker/: dev.backend.Dockerfile  dev.frontend.Dockerfile  start_backend.sh
frontend/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  Trunk.toml  dev.nginx.conf  index.html  prod.nginx.conf
frontend/src/: app.rs  fuzzy_search.rs  lib.rs  notification_manager.rs  res.rs  strings.rs  util.rs
frontend/src/components/: checkout.rs  filter_menu.rs  izettle_pay.rs  mod.rs  parsed_input.rs  select.rs
frontend/src/models/: event.rs  http.rs  inventory.rs  mod.rs  user.rs
frontend/src/page/: accounting.rs  analytics.rs  deposit.rs  inventory.rs  loading.rs  mod.rs  store.rs  transactions.rs
frontend/src/util/: export.rs
frontend/src/views/: event.rs  filter_menu.rs  inventory.rs  mod.rs  parsed_input.rs  tillgodolista.rs  transaction.rs
frontend/static/: charts.css  filter_menu.css  heart_spinner.css  left_panel.css  manifest.json  notifications.css  penguin.css  ripple_spinner.css  styles.css  tailwind.css
frontend/static/styles/: charts.css  common.css  filter_menu.css  inventory.scss  notifications.css  penguin.css
shop_macro/: Cargo.toml
shop_macro/src/: grammar.lalrpop  lib.rs
