[package]
name = "laggit_backend"
version = "0.6.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
license = "LGPL-3.0"
description = "The backend of the LaggIT web page"
repository = "https://github.com/hulthe/LaggIT"
edition = "2018"
workspace = ".."

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
#rocket = "0.4.5"
#rocket_contrib = "0.4.5"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
r2d2 = "0.8.3"
juniper = "0.11.1"
juniper_codegen = "0.11.1"
juniper_rocket = "0.2.0"
dotenv = "0.13.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
chrono = { version = "0.4.10", features = ["serde"] }
orion = "0.13.1"
hex = "0.3.2"
frank_jwt = "3.1.0"
itertools = "0.8.0"
log = "0.4.8"

[dependencies.laggit_api]
path = "../common"
features = ["diesel_impl"]
