[package]
name = "strecklistan_backend"
version = "0.9.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
license = "MPL-2.0"
description = "The backend of strecklistan: a simple web-shop"
repository = "https://github.com/hulthe/strecklistan"
readme = "../README.rst"
edition = "2018"
workspace = ".."

[dependencies]
#rocket = "0.5"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
#rocket_contrib = "0.5"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
duplicate = "0.2"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.10", features = ["serde"] }
orion = "0.15.6"
hex = "0.4.2"
frank_jwt = "3.1"
itertools = "0.10.0"
log = "0.4.14"
futures = "0.3"
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio = { version = "0.2", features = ["time"] }
lazy_static="1"
sha2 = "0.9.3"
rmp-serde = "0.15.4"
ron = "0.6.4"
strum = "0.20"
strum_macros = "0.20"


[dependencies.strecklistan_api]
path = "../common"
features = ["diesel_impl"]
