[package]
name = "strecklistan_api"
version = "0.8.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
license = "MPL-2.0"
description = "Public API types and functions of strecklistan: a simple web-shop"
repository = "https://github.com/hulthe/strecklistan"
edition = "2018"
workspace = ".."

[dependencies]
chrono = "0.4"
diesel = { version = "1.4", optional = true }
diesel_derives = { version = "1.4", optional = true }
diesel-derive-enum = { version = "0.4", features = ["postgres"], optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
getset = "0.0.7"
regex = "1"
lazy_static = "1"

[features]
default = ["serde_impl", "debug", "hash"]

diesel_impl = ["diesel", "diesel_derives", "diesel-derive-enum", "diesel-derive-enum/postgres"]
serde_impl = ["serde", "serde_derive", "chrono/serde"]

debug = []
eq = []
hash = []
