[package]
name = "strecklistan_api"
version = "0.11.1"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
license = "MPL-2.0"
description = "Public API types and functions of strecklistan: a simple web-shop"
repository = "https://github.com/hulthe/strecklistan"
edition = "2018"
workspace = ".."

[dependencies]
chrono = "0.4"
getset = "0.1"
regex = "1"
lazy_static = "1"

diesel = { version = "1.4", optional = true }
diesel_derives = { version = "1.4", optional = true }
diesel-derive-enum = { version = "1.1", features = ["postgres"], optional = true }

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = ["serde_impl", "debug", "hash"]

diesel_impl = ["diesel", "diesel_derives", "diesel-derive-enum", "diesel-derive-enum/postgres"]
serde_impl = ["serde", "chrono/serde"]

debug = []
eq = []
hash = []
