[package]
name = "laggit_web"
version = "0.6.0"
authors = ["Joakim Hulthe <joakim@hulthe.net"]
license = "LGPL-3.0"
description = "The frontend of the LaggIT web page"
repository = "https://github.com/hulthe/LaggIT"
readme = "./README.md"
edition = "2018"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
# Seed 0.5.1 has a bug where cloning Node:s doesn't clone event listeners
# TODO: update this when new version is released
#seed = "=0.5.2"
seed = { git = "https://github.com/seed-rs/seed.git", branch = "master" }
cfg-if = "0.1.7"
wasm-bindgen = "^0.2.45"
strum = "0.15.0"
strum_macros = "0.15.0"
futures = "^0.1.26"
itertools = "^0.8"
staticvec = { version = "^0.3", default_features = false }
serde = { version = "^1.0.90", features = ['derive'] }

# Custom allocator. Smaller & slower than the default.
wee_alloc = { version = "0.4.3", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version ="0.1.6", optional = true }
semver = "0.9.0"

[dependencies.chrono]
version = "0.4.10"
default-features = false
features = ["serde", "wasmbind", "js-sys"]

[dependencies.laggit_api]
path="../common"

[dependencies.css_typegen]
git = "https://github.com/hulthe/css_typegen.git"
branch = "master"

[dependencies.web-sys]
version = "^0.3.19"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CustomEvent"
]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.45" # NOTE: keep in sync with wasm-bindgen version

