[package]
name = "strecklistan_web"
version = "0.8.0"
authors = ["Joakim Hulthe <joakim@hulthe.net"]
license = "MPL-2.0"
description = "The frontend of strecklistan: a simple web-shop"
repository = "https://github.com/hulthe/strecklistan"
readme = "../README.rst"
edition = "2018"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "=0.7.0"
cfg-if = "0.1.7"
wasm-bindgen = "^0.2.45"
js-sys = "0.3"
strum = "0.15.0"
strum_macros = "0.15.0"
futures = "^0.1.26"
itertools = "^0.8"
serde = { version = "^1.0.90", features = ['derive'] }
serde_json = "1"
csv = "1"
mime = "0.3"

# Custom allocator. Smaller & slower than the default.
wee_alloc = { version = "0.4.3", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version ="0.1.6", optional = true }
semver = "0.9.0"

[dependencies.chrono]
version = "=0.4.10"
default-features = false
features = ["serde", "wasmbind", "js-sys"]

[dependencies.strecklistan_api]
path="../common"

[dependencies.css_typegen]
git = "https://github.com/hulthe/css_typegen.git"
branch = "master"

[dependencies.web-sys]
version = "^0.3.19"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CustomEvent"
]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.45" # NOTE: keep in sync with wasm-bindgen version

